--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-Django~=4.1
+asgiref==3.8.1
+Django==4.2.13
+django-taggit==3.0.0
+Markdown==3.4.1
+psycopg2-binary==2.9.9
+sqlparse==0.5.0
+typing_extensions==4.11.0
